[package]
name = "part_rust"
version = "0.1.0"
authors = ["HyeokSuLee <HyeokSuLee@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
bevy = "0.5.0"
lazy_static = "*"
serde = "*"
ron = "*"
anyhow = "*"

bevy_rapier3d = "0.8.0"
